<resources>
    <string name="app_name">Tokolelang</string>

    <string name="date_format">yyyy-MM-dd hh:mm:ss</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="selamat_datang">LELANG LEBIH MUDAH</string>
    <string name="time_description">%1$s Hari lagi</string>
    <string name="time_expired">Waktu habis</string>
    <string name="product">Product</string>
    <string name="current_bid">CURRENT BID</string>
    <string name="next_bid">NEXT BID</string>
    <string name="minimum_price">MINIMUM PRICE</string>
    <string name="bidder">BIDDER</string>
    <string name="make_bid">MAKE A BID</string>
    <string name="minimum_bid">MINIMUM BID</string>
    <string name="amount_bid">Amount</string>
    <string name="submit_bid">SUBMIT BID</string>
    <string name="email">Email</string>
    <string name="password_empty">password must be filled</string>
    <string name="email_empty">email must be filled</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Take or choose your a product image.</string>
    <string name="min_price">Minimum Price</string>
    <string name="nextbid">Next Bid</string>
    <string name="timeexpired">Time Expired</string>
    <string name="select_action">Select Action</string>
    <string name="add_product">Add Product</string>
    <string name="bidder_not_found">BIDDER NOT FOUND.</string>
    <string name="are_you_sure_bid">Are you sure you want to close this bid?</string>
    <string name="cancel_bid">Cancel My Bid</string>
    <string name="list_bid">List Bid</string>
    <string name="other_products">OTHER PRODUCTS</string>
</resources>
