<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="devcamp.app.tokolelang.ui.main.MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            fontPath="fonts/OpenSans-SemiBold.ttf"
            android:textColor="@color/semiBlack"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/grey_500"
            android:textSize="12sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey_500"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:theme="@style/PlanetWinEdittextLine"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:passwordToggleEnabled="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey_500"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:theme="@style/PlanetWinEdittextLine"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:background="@color/greenPrimary"/>

    </LinearLayout>

</LinearLayout>
