<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_close"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_bid"
                fontPath="fonts/OpenSans-Light.ttf"
                android:textColor="@color/semiBlack"
                android:textSize="12sp"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="3dp"
                android:src="@mipmap/ic_info"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtMinimumBid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IDR 20.000"
            android:textColor="@color/semiBlack"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtAmountBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/grey_500"
        app:errorTextAppearance="@style/ErrorAppearance">

        <EditText
            android:id="@+id/edtAmountBid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_bid"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:theme="@style/EditTextLine"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|end">

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="6dp"
            android:visibility="gone"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true" />

        <Button
            android:id="@+id/btnBid"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButton"
            android:text="@string/submit_bid"
            fontPath="fonts/OpenSans-SemiBold.ttf"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>