<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/placeholder"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#9034495E"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        fontPath="fonts/OpenSans-SemiBold.ttf"
                        android:layout_centerVertical="true"
                        android:textColor="@color/semiBlack"/>

                    <com.github.rahatarmanahmed.cpv.CircularProgressView
                        android:id="@+id/progressBar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:visibility="gone"
                        app:cpv_animAutostart="true"
                        app:cpv_indeterminate="true" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="bottom|center_vertical"
                android:layout_marginBottom="80dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_launcher_round"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtProductName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PT XL Axiata Tbk"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imgTime"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@mipmap/ic_time_white"/>

                        <TextView
                            android:id="@+id/txtExpired"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:textSize="12sp"
                            android:textColor="@android:color/white"
                            android:textAllCaps="true"
                            android:text="1 Hari lagi"/>

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="6dp"
                            android:src="@mipmap/ic_person_white"/>

                        <TextView
                            android:id="@+id/txtPersonTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:textSize="12sp"
                            android:textColor="@android:color/white"
                            android:textAllCaps="true"
                            android:text="3"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_bid"
                        android:textColor="@color/semiBlack"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/txtHighestBid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp. 0"
                        android:textColor="@color/semiBlack"
                        android:layout_marginTop="5dp"
                        fontPath="fonts/OpenSans-Bold.ttf"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/next_bid"
                            fontPath="fonts/OpenSans-Light.ttf"
                            android:textColor="@color/semiBlack"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtNextBid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp. 0"
                            android:textColor="@color/semiBlack"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minimum_price"
                            fontPath="fonts/OpenSans-Light.ttf"
                            android:textColor="@color/semiBlack"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtMinPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp. 0"
                            android:textColor="@color/semiBlack"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bidder"
                            fontPath="fonts/OpenSans-Light.ttf"
                            android:textColor="@color/semiBlack"
                            android:id="@+id/txtBidderCount"
                            android:textSize="12sp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/lstBiddger"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnMakeBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:textColor="@android:color/white"
        android:clickable="true"
        app:layout_anchorGravity="top"
        android:layout_gravity="bottom"
        android:foreground="?selectableItemBackground"
        android:text="@string/make_bid"/>


</android.support.design.widget.CoordinatorLayout>